[package]
name = "kanban"
version = "4.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
axum = "0.7.7"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
socketioxide = "0.15.0"
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
