[package]
name = "kanban"
version = "6.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
askama = "0.13.1"
axum = "0.8.3"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
socketioxide = "0.15.1"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
uuid = { version = "1.16.0", features = ["v7"] }
